--- a/rpt/hmis033_weekly_epid_surv_over_5.jrxml
+++ b/rpt/hmis033_weekly_epid_surv_over_5.jrxml
@@ -111,7 +111,7 @@ order by DIS_DCL_ID_A,DIS_DESC]]>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="SansSerif" size="11" isBold="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$R{From.Date}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$R{From.Date}+":"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement key="staticText-20" mode="Opaque" x="393" y="15" width="69" height="14" forecolor="#FFFFFF" backcolor="#000000" uuid="283859a1-5956-437a-b692-9cf7bfd2faa3"/>
@@ -124,7 +124,7 @@ order by DIS_DCL_ID_A,DIS_DESC]]>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="SansSerif" size="11" isBold="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$R{To.DateYear}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$R{To.DateYear}+":"]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
