--- a/rpt/hmis033_weekly_epid_surv_under_5.jrxml
+++ b/rpt/hmis033_weekly_epid_surv_under_5.jrxml
@@ -111,7 +111,7 @@ order by DIS_DCL_ID_A,DIS_DESC]]>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="SansSerif" size="11" isBold="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$R{From.Date}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$R{From.Date}+":"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement key="staticText-20" mode="Opaque" x="393" y="15" width="69" height="14" forecolor="#FFFFFF" backcolor="#000000" uuid="c6505655-7327-4e73-808a-e86c53087828"/>
