--- a/rpt/PatientBillPayments.jrxml
+++ b/rpt/PatientBillPayments.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.14.0.final using JasperReports Library version 6.14.0-2ab0d8625be255bf609c78e1181801213e51db8f  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="PatientBillPayments" pageWidth="535" pageHeight="802" whenNoDataType="NoPages" columnWidth="535" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="820cee62-ac47-4018-85c2-9fa4688fef39">
+<!-- Created with Jaspersoft Studio version 6.15.0.final using JasperReports Library version 6.15.0-dd49bfb94918336b8321d5507193f0169ead4e95  -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="PatientBillPayments" pageWidth="535" pageHeight="802" whenNoDataType="NoPages" columnWidth="535" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" resourceBundle="PatientBillPayments" whenResourceMissingType="Key" uuid="820cee62-ac47-4018-85c2-9fa4688fef39">
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<import value="net.sf.jasperreports.engine.*"/>
@@ -41,7 +41,7 @@ WHERE BLP_ID_BILL = $P{billID} ORDER BY BLP_DATE ASC]]>
 	</pageHeader>
 	<columnHeader>
 		<band height="30" splitType="Stretch">
-			<staticText>
+			<textField>
 				<reportElement key="staticText-5" x="460" y="11" width="75" height="19" uuid="eb3d0548-3413-477e-ab1a-be6028b6f9be"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -52,9 +52,9 @@ WHERE BLP_ID_BILL = $P{billID} ORDER BY BLP_DATE ASC]]>
 				<textElement textAlignment="Right">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Amount]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{Amount}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-6" x="292" y="11" width="88" height="19" uuid="2c3bf78d-e9e2-466e-aa27-2e876e9cc7ac"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -65,8 +65,8 @@ WHERE BLP_ID_BILL = $P{billID} ORDER BY BLP_DATE ASC]]>
 				<textElement textAlignment="Center">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Date]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{Date}]]></textFieldExpression>
+			</textField>
 		</band>
 	</columnHeader>
 	<detail>
@@ -101,7 +101,7 @@ WHERE BLP_ID_BILL = $P{billID} ORDER BY BLP_DATE ASC]]>
 	</detail>
 	<columnFooter>
 		<band height="25" splitType="Stretch">
-			<staticText>
+			<textField>
 				<reportElement key="staticText-4" x="388" y="0" width="72" height="25" uuid="c16c36e5-c45e-47ea-bcbe-e86e526a402f"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -112,8 +112,8 @@ WHERE BLP_ID_BILL = $P{billID} ORDER BY BLP_DATE ASC]]>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[PAID:]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{Paid}+":"]]></textFieldExpression>
+			</textField>
 			<textField pattern="#,##0.00" isBlankWhenNull="false">
 				<reportElement key="textField-1" x="460" y="0" width="75" height="25" uuid="e83bf802-4912-4694-a482-3df74a5814ca"/>
 				<box>
